compiler/fir/analysis-tests/testData/resolve/nestedInnerTypeAliases/innerOnTopLevelTypeAlias.kt
class C

<!WRONG_MODIFIER_CONTAINING_DECLARATION("inner; file")!>inner<!> typealias TA = C
